<resources>
    <string name="app_name">interfaces_at</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Teste nome</string>
    <string name="nav_header_subtitle">TesteEmail@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_info">Informações Pessoais</string>
    <string name="menu_formacao">Formação</string>
    <string name="menu_experienciProfissional">Experiência Profissional</string>
    <string name="menu_cursos">Cursos</string>
    <string name="menu_publicacoes">Publicacoes</string>
</resources>